# g-pulse

./: .dockerignore  .env.example  .gitignore  README.md
deploy/: Dockerfile  docker-compose.yml
nginx/: Dockerfile  app.conf
services/api/: manage.py  pyproject.toml
services/api/apps/accounts/: models.py
services/api/apps/accounts/api/: schemas.py  urls.py  views.py
services/api/apps/accounts/migrations/: 0001_initial.py
services/api/apps/alerts/: models.py
services/api/apps/alerts/api/: schemas.py  urls.py  views.py
services/api/apps/alerts/migrations/: 0001_initial.py
services/api/apps/monitoring/: models.py
services/api/apps/monitoring/api/: schemas.py  urls.py  views.py
services/api/apps/monitoring/migrations/: 0001_initial.py
services/api/apps/projects/: models.py
services/api/apps/projects/api/: schemas.py  urls.py  views.py
services/api/apps/projects/migrations/: 0001_initial.py
services/api/config/: asgi.py  settings.py  urls.py
