[project]
name = "g-pulse-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "channels-redis>=4.3.0",
    "channels[types]>=4.3.2",
    "cryptography==46.0.7",
    "django==6.0.4",
    "django-modern-rest[jwt,msgspec,pydantic]==0.7.0",
    "django-stubs==6.0.2",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "python-slugify>=8.0.4",
    "uvicorn==0.44.0",
]
